--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,8 @@
+15/03/16
+-Implement recursive AI for TicTacToe
+-Create TicTacToe in javascript
+-Create snake game in html5
+
 15/03/15.2
 -Create TicTacToe in javascript
 -Create snake game in html5
