--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,11 @@
+15/03/23
+-TicTacToe
+	-Implement 1/2 player.
+	-Implement difficulty level.
+	-Add win/lose/draw announcements.
+-Snake
+	-Create snake game using canvas.
+
 15/03/21.1
 -Implement 1/2 player.
 -Implement difficulty level.
