--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,15 @@
+15/03/24
+-TicTacToe
+	-Implement 1/2 player.
+	-Implement difficulty level.
+	-Add win/lose/draw announcements.
+-Snake
+	-Autoplay.
+	-Score
+	-High score.
+	-Difficulty.
+	-Start/restart button.
+
 15/03/23
 -TicTacToe
 	-Implement 1/2 player.
