--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,13 @@
+15/03/27
+-TicTacToe
+	-I consider this page complete.
+-Snake
+	-Autoplay.
+	-Score
+	-High score.
+	-Difficulty.
+	-Start/restart button.
+
 15/03/24
 -TicTacToe
 	-Implement 1/2 player.
